// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-0 {
  -webkit-appearance: none;
  border: 1px solid #d9d9d9;
  border-radius: 8px;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  cursor: not-allowed;
}

.emotion-0:not([disabled]):hover {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-0::-moz-placeholder {
  opacity: 0.6;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-0::placeholder {
  opacity: 0.6;
}

.emotion-11 {
  color: #574feb !important;
}

<div
  class="emotion-6 emotion-1 emotion-11 test fp-Box fp-TextareaField"
>
  <div
    class="emotion-6 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-5 fp-TextareaWrapper fp-Box"
    >
      <textarea
        aria-invalid="false"
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Textarea"
        id="FieldWrapper"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`overrides TextareaField.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-0 {
  -webkit-appearance: none;
  border: 1px solid #d9d9d9;
  border-radius: 8px;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  cursor: not-allowed;
}

.emotion-0:not([disabled]):hover {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-0::-moz-placeholder {
  opacity: 0.6;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-0::placeholder {
  opacity: 0.6;
}

.emotion-9 {
  background-color: red;
}

<div
  class="emotion-9 emotion-1 emotion-2 fp-Box fp-TextareaField"
>
  <div
    class="emotion-6 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-5 fp-TextareaWrapper fp-Box"
    >
      <textarea
        aria-invalid="false"
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Textarea"
        id="FieldWrapper"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-0 {
  -webkit-appearance: none;
  border: 1px solid #d9d9d9;
  border-radius: 8px;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  cursor: not-allowed;
}

.emotion-0:not([disabled]):hover {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-0::-moz-placeholder {
  opacity: 0.6;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-0::placeholder {
  opacity: 0.6;
}

<div
  class="emotion-6 emotion-1 emotion-2 fp-Box fp-TextareaField"
>
  <div
    class="emotion-6 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-5 fp-TextareaWrapper fp-Box"
    >
      <textarea
        aria-invalid="false"
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Textarea"
        id="FieldWrapper"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`props should render correctly when disabled 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-0 {
  -webkit-appearance: none;
  border: 1px solid #d9d9d9;
  border-radius: 8px;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  cursor: not-allowed;
}

.emotion-0:not([disabled]):hover {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-0::-moz-placeholder {
  opacity: 0.6;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-0::placeholder {
  opacity: 0.6;
}

<div
  class="emotion-6 emotion-1 emotion-2 fp-Box fp-TextareaField"
>
  <div
    class="emotion-6 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-5 fp-TextareaWrapper fp-Box"
    >
      <textarea
        aria-invalid="false"
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Textarea"
        disabled=""
        id="FieldWrapper"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-0 {
  -webkit-appearance: none;
  border: 1px solid #d9d9d9;
  border-radius: 8px;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  cursor: not-allowed;
}

.emotion-0:not([disabled]):hover {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-0::-moz-placeholder {
  opacity: 0.6;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-0::placeholder {
  opacity: 0.6;
}

.emotion-11 {
  background-color: #574feb !important;
}

<div
  class="emotion-6 emotion-1 emotion-11 fp-Box fp-TextareaField"
>
  <div
    class="emotion-6 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-5 fp-TextareaWrapper fp-Box"
    >
      <textarea
        aria-invalid="false"
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Textarea"
        id="FieldWrapper"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`props sizes should render large correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-appearance: none;
  border: 1px solid #d9d9d9;
  border-radius: 8px;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  cursor: not-allowed;
}

.emotion-0:not([disabled]):hover {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-0::-moz-placeholder {
  opacity: 0.6;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-0::placeholder {
  opacity: 0.6;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
  font-size: 1.5rem;
}

<div
  class="emotion-6 emotion-1 emotion-2 fp-Box fp-TextareaField"
>
  <div
    class="emotion-6 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-5 fp-TextareaWrapper fp-Box"
    >
      <textarea
        aria-invalid="false"
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Textarea"
        id="FieldWrapper"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`props sizes should render medium correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-appearance: none;
  border: 1px solid #d9d9d9;
  border-radius: 8px;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  cursor: not-allowed;
}

.emotion-0:not([disabled]):hover {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-0::-moz-placeholder {
  opacity: 0.6;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-0::placeholder {
  opacity: 0.6;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
  font-size: 1.25rem;
}

<div
  class="emotion-6 emotion-1 emotion-2 fp-Box fp-TextareaField"
>
  <div
    class="emotion-6 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-5 fp-TextareaWrapper fp-Box"
    >
      <textarea
        aria-invalid="false"
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Textarea"
        id="FieldWrapper"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`props sizes should render small correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-appearance: none;
  border: 1px solid #d9d9d9;
  border-radius: 8px;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  cursor: not-allowed;
}

.emotion-0:not([disabled]):hover {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-0::-moz-placeholder {
  opacity: 0.6;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-0::placeholder {
  opacity: 0.6;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
  font-size: 0.875rem;
}

<div
  class="emotion-6 emotion-1 emotion-2 fp-Box fp-TextareaField"
>
  <div
    class="emotion-6 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-5 fp-TextareaWrapper fp-Box"
    >
      <textarea
        aria-invalid="false"
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Textarea"
        id="FieldWrapper"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`props states should render danger correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-0 {
  -webkit-appearance: none;
  border: 1px solid #d9d9d9;
  border-radius: 8px;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  cursor: not-allowed;
}

.emotion-0:not([disabled]):hover {
  box-shadow: #fbe7e7 0px 0px 0px 2px !important;
  border-color: #f3b9b9;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-0::-moz-placeholder {
  opacity: 0.6;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-0::placeholder {
  opacity: 0.6;
}

.emotion-0 {
  border-color: #da1717;
  box-shadow: #fbe7e7 0px 0px 0px 3px !important;
}

<div
  class="emotion-6 emotion-1 emotion-2 fp-Box fp-TextareaField"
>
  <div
    class="emotion-6 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-5 fp-TextareaWrapper fp-Box"
    >
      <textarea
        aria-invalid="true"
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Textarea"
        id="FieldWrapper"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`props states should render primary correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-0 {
  -webkit-appearance: none;
  border: 1px solid #d9d9d9;
  border-radius: 8px;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  cursor: not-allowed;
}

.emotion-0:not([disabled]):hover {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-0::-moz-placeholder {
  opacity: 0.6;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-0::placeholder {
  opacity: 0.6;
}

.emotion-0 {
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

<div
  class="emotion-6 emotion-1 emotion-2 fp-Box fp-TextareaField"
>
  <div
    class="emotion-6 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-5 fp-TextareaWrapper fp-Box"
    >
      <textarea
        aria-invalid="false"
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Textarea"
        id="FieldWrapper"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`props states should render success correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-0 {
  -webkit-appearance: none;
  border: 1px solid #d9d9d9;
  border-radius: 8px;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  cursor: not-allowed;
}

.emotion-0:not([disabled]):hover {
  box-shadow: #e6f2ea 0px 0px 0px 2px !important;
  border-color: #b5d8c1;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-0::-moz-placeholder {
  opacity: 0.6;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-0::placeholder {
  opacity: 0.6;
}

.emotion-0 {
  border-color: #0a7d33;
  box-shadow: #e6f2ea 0px 0px 0px 3px !important;
}

<div
  class="emotion-6 emotion-1 emotion-2 fp-Box fp-TextareaField"
>
  <div
    class="emotion-6 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-5 fp-TextareaWrapper fp-Box"
    >
      <textarea
        aria-invalid="false"
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Textarea"
        id="FieldWrapper"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`props states should render warning correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-0 {
  -webkit-appearance: none;
  border: 1px solid #d9d9d9;
  border-radius: 8px;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  cursor: not-allowed;
}

.emotion-0:not([disabled]):hover {
  box-shadow: #fdf5e8 0px 0px 0px 2px !important;
  border-color: #f9e1bc;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-0::-moz-placeholder {
  opacity: 0.6;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-0::placeholder {
  opacity: 0.6;
}

.emotion-0 {
  border-color: #ed9c22;
  box-shadow: #fdf5e8 0px 0px 0px 3px !important;
}

<div
  class="emotion-6 emotion-1 emotion-2 fp-Box fp-TextareaField"
>
  <div
    class="emotion-6 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-5 fp-TextareaWrapper fp-Box"
    >
      <textarea
        aria-invalid="false"
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Textarea"
        id="FieldWrapper"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`theming TextareaField.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-0 {
  -webkit-appearance: none;
  border: 1px solid #d9d9d9;
  border-radius: 8px;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  cursor: not-allowed;
}

.emotion-0:not([disabled]):hover {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-0::-moz-placeholder {
  opacity: 0.6;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-0::placeholder {
  opacity: 0.6;
}

.emotion-9 {
  background-color: red;
}

<div
  class="emotion-9 emotion-1 emotion-2 fp-Box fp-TextareaField"
>
  <div
    class="emotion-6 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-5 fp-TextareaWrapper fp-Box"
    >
      <textarea
        aria-invalid="false"
        class="emotion-0 emotion-1 emotion-2 fp-Box fp-Textarea"
        id="FieldWrapper"
        type="text"
      />
    </div>
  </div>
</div>
`;
